Add /v1/ds-graph route
